fix(project-details): add margin-top to scrollbar to prevent overlap with navbar

--- a/src/app/pages/portfolio/components/project-details/project-details.component.scss
+++ b/src/app/pages/portfolio/components/project-details/project-details.component.scss
@@ -26,7 +26,7 @@ header {
     position: relative;
   }
 }
-.header-action{
+.header-action {
   z-index: 10;
 }
 .frosted-glass {
@@ -203,6 +203,10 @@ li {
 }
 
 :host ::ng-deep {
+  ::-webkit-scrollbar-track {
+    margin-top: $header-height;
+    border-radius: 4px 4px 0 0;
+  }
   .skeleton-loading::after {
     border-radius: 3px !important;
     overflow: hidden;
